--- a/public/500.html
+++ b/public/500.html
@@ -23,7 +23,7 @@
       margin: 0;
       padding: 0;
 
-      background-image: url('library1.jpg'), linear-gradient(135deg, rgba(230,74,25,0.4) 1%,rgba(230,74,25,0.64) 35%,rgba(68,29,5,1) 87%,rgba(31,19,0,1) 99%);
+      background-image: url('/library1.jpg'), linear-gradient(135deg, rgba(230,74,25,0.4) 1%,rgba(230,74,25,0.64) 35%,rgba(68,29,5,1) 87%,rgba(31,19,0,1) 99%);
 
 
     }
@@ -67,7 +67,7 @@
   <div class="header">
     <div>
       <a href="http://powosh.herokuapp.com">
-        <img src="logo2.png", class="header-logo">
+        <img src="/logo2.png", class="header-logo">
       </a>
     </div>
   </div>
