url fixes for 404 page

--- a/public/404.html
+++ b/public/404.html
@@ -66,7 +66,7 @@
   <!-- This file lives in public/404.html -->
   <div class="header">
     <div>
-      <a href="http://powosh.herokuapp.com">
+      <a href="http://www.powosh.com">
         <img src="/logo2.png", class="header-logo">
       </a>
     </div>
@@ -75,7 +75,7 @@
     <div>
       <h1>Oh oh! Looks like you're lost.</h1>
       <p>The page you're looking for doesn't exist. You might want to
-        head back to the <a href="http://powosh.herokuapp.com">home page</a> and
+        head back to the <a href="http://www.powosh.com">home page</a> and
         try again.</p>
       </div>
       <p>.</p>
