--- a/public/500.html
+++ b/public/500.html
@@ -66,7 +66,7 @@
   <!-- This file lives in public/404.html -->
   <div class="header">
     <div>
-      <a href="http://powosh.herokuapp.com">
+      <a href="http://www.powosh.com">
         <img src="/logo2.png", class="header-logo">
       </a>
     </div>
@@ -74,7 +74,7 @@
   <div class="dialog">
     <div>
       <h1>We're sorry! Something went wrong.</h1>
-      <p>Please go back to the <a href="http://powosh.herokuapp.com">home page</a>
+      <p>Please go back to the <a href="http://www.powosh.com">home page</a>
       or try again later.</p>
       </div>
       <p>.</p>
